<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <ImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/desc" />

    <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:layout_height="@dimen/dp_100"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/tv_title"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/tv_content"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/sp_14" />

        <TextView
                android:id="@+id/tv_describe"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tv_describe"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/sp_14" />

        <TextView
                android:id="@+id/tv_extra"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tv_describe"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/sp_12" />
    </LinearLayout>

</LinearLayout>

