<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93" />

    <EditText
            android:id="@+id/et_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_name"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/sp_19"
            app:layout_constraintBottom_toTopOf="@+id/et_get_check_code"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <EditText
            android:id="@+id/et_get_check_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/et_check_code"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/sp_19"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
            app:layout_constraintRight_toLeftOf="@+id/btn_get_check_code"
            app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

    <Button
            android:id="@+id/btn_get_check_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_code"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintLeft_toLeftOf="@+id/et_get_check_code"
            app:layout_constraintTop_toTopOf="@+id/et_get_check_code" />

    <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/btn_login"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@+id/tv_register"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/et_get_check_code" />

    <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/tv_register"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>