<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/tv_tab_one"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tab2" />


    <TextView
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/tv_tab_two"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tab1"
            app:layout_constraintRight_toLeftOf="@+id/tab3" />


    <TextView
            android:id="@+id/tab3"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/tv_tab_three"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tab2"
            app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>