<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.nlonr.activity.MainActivity">

        <TextView
                android:id="@+id/tv1"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_150"
                android:layout_margin="@dimen/dp_20"
                android:background="#f5ec7e"
                android:gravity="center"
                android:text="Hello World!"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv2"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#68b0f9"
                android:gravity="center"
                android:text="@string/tv_one_text"
                app:layout_constraintLeft_toRightOf="@+id/tv1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv1" />

        <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#984ff7"
                android:gravity="center"
                android:text="@string/tv_two_text"
                app:layout_constraintBottom_toBottomOf="@+id/tv1"
                app:layout_constraintLeft_toRightOf="@+id/tv1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <ImageView
                android:id="@+id/img_test"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_280"
                android:background="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/tv1"
                tools:layout_editor_absoluteY="199dp"
                android:contentDescription="@string/desc"
                tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>