<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5">

    <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".01" />

    <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="-0.01" />

    <ImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/desc"
            app:layout_constraintLeft_toRightOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".32" />

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/tv_title"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_content"
            app:layout_constraintLeft_toRightOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/tv_content"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toTopOf="@+id/tv_describe"
            app:layout_constraintLeft_toRightOf="@+id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
            android:id="@+id/tv_describe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tv_describe"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@+id/tv_extra"
            app:layout_constraintLeft_toRightOf="@+id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <TextView
            android:id="@+id/tv_extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tv_describe"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/img_icon"
            app:layout_constraintLeft_toRightOf="@+id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_describe" />

</androidx.constraintlayout.widget.ConstraintLayout>